Changelog
=========

0.5.2 (????-??-??)
------------------

- fixed #57 ticket priorities nicth hardcoded
  [hplocher,ohockel]

0.5.1 (2013-09-09)
------------------

- sorting in TestplanMacro activated
- now showing test case title instead of testcase wiki name
  [ohockel]

0.5.0 (2013-06-25)
------------------

- fixed #41 test action comments are often multiplied
- implemented create ticket in testcase accordion
  [lmende]
- implemented skip remaining function in accordion
- added error handling for javascript bug on closing the last test action on a
  test case in accordion
- parsing get param testman_cnum on attachment creation javascript (see
  TestManager.py class TestManagerAttachmentScript)
- event to update test comment if attachment is inserted with change number of
  comment (testman_cnum)
- removing 'commit' and 'rollback' statements from schema.py
  as they are not to be emitted anymore since Trac 1.0
- updated test cases
- improved accordion css
  [ohockel]

0.4.0 (2013-05-08)
------------------

- fix automatic creation of needed custom tables
  [hplocher]
- fix to alter table and add tester column
  [ohockel]
- initial projecteval macro with dependencies
  [ohockel]
- fixing bug on iterating over string when restarting
  broken testplans
  [ohockel]
- now sets the tester of a tc, who executes it
  [lmende]

0.3.1 (2013-01-16)
------------------

- fixing bug on clicking on a testcase without redirecting to the testquery macro
[otto]

- TestCaseAccordion now enforces specifying a comment when setting a step to failed.
  this fixes #40
[hplocher]

0.3.0 (2012-10-26)
----------------

- enhancement #32 the possibility of merging multiple
  testcases with the same name on testevalmacro
- enhancement #31 assign a testcase multiple without
  assigning it to a specific tester
- fixed bug on the evalmacro with multiple testruns
  this fixes #39
- fixed bug on wildcard-evaluation where testcases are
  sorted out